--- a/apps/frontend-pwa/Dockerfile
+++ b/apps/frontend-pwa/Dockerfile
@@ -30,8 +30,6 @@ RUN pnpm i --frozen-lockfile
 ARG NODE_ENV="production"
 ARG COOKIE_DOMAIN
 ARG API_DOMAIN
-ARG S3_PATHNAME
-ARG S3_HOSTNAME
 ARG NEXT_PUBLIC_AVATAR_BASE_PATH
 ARG NEXT_PUBLIC_ADD_RESPONSE_URL
 ARG NEXT_PUBLIC_API_URL
@@ -42,6 +40,7 @@ ARG NEXT_PUBLIC_MANAGE_URL
 ARG NEXT_PUBLIC_CONTROL_URL
 ARG NEXT_PUBLIC_MATOMO_URL
 ARG NEXT_PUBLIC_MATOMO_ID
+ARG BLOB_STORAGE_ACCOUNT_URL
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
