chore: fix DATABASE_URL and NEXT_PUBLIC_AUTH_URL for local docker-compose.yml

--- a/apps/frontend-manage/Dockerfile
+++ b/apps/frontend-manage/Dockerfile
@@ -33,6 +33,7 @@ ARG API_DOMAIN
 ARG NEXT_PUBLIC_AVATAR_BASE_PATH
 ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_API_URL_SSR
+ARG NEXT_PUBLIC_AUTH_URL
 ARG NEXT_PUBLIC_PWA_URL
 ARG NEXT_PUBLIC_MANAGE_URL
 ARG NEXT_PUBLIC_CONTROL_URL
