enhance(packages/prisma): add seed for second group challenge

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -90,7 +90,7 @@
     "seed:qa": "ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
     "seed:qa:bf1": "ENV=development doppler run --config stg -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
     "seed:qa:test": "ts-node --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
-    "seed:bf1": "ENV=development bun run src/data/seedBF1.ts",
+    "seed:bf1": "ENV=development doppler run --config dev bun run src/data/seedBF1.ts",
     "seed:test": "ENV=development bun run src/data/seedTEST.ts",
     "size": "size-limit"
   },
