--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -80,7 +80,7 @@
     "seed:prod": "ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
     "seed:prod:achievements": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
     "seed:prod:ami": "pnpm run seed:qa:ami",
-    "seed:prod:bf1": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
+    "seed:prod:bf1": "ENV=development doppler run --config prd bun run src/data/seedBF1.ts",
     "seed:prod:bf2": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF2.ts",
     "seed:prod:flashcards": "ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedFlashcards.ts",
     "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
