--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -39,16 +39,16 @@ jobs:
         shell: bash
         run: |
           pnpm run lint
-  check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8.10.0
-          run_install: true
-      - name: Check types
-        shell: bash
-        run: |
-          pnpm run check
+  # check:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+  #     - uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 8.10.0
+  #         run_install: true
+  #     - name: Check types
+  #       shell: bash
+  #       run: |
+  #         pnpm run check
