chore(ci): add ** to excluded sonar sources

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,4 +10,4 @@ sonar.projectVersion=2.0
 
 sonar.sources=apps,packages,deploy
 
-sonar.exclusions=apps/frontend-pwa/android,apps/frontend-pwa/ios,
+sonar.exclusions=apps/frontend-pwa/android/**,apps/frontend-pwa/ios/**,
