enhance: add bilingual achievement support

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -65,14 +65,14 @@
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:resetCypress": "pnpm run prisma:reset:raw",
     "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema.prisma",
-    "prisma:setup": "run-s prisma:reset prisma:push seed seed:achievements",
+    "prisma:setup": "run-s prisma:reset prisma:push seed",
     "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
     "script": "ENV=development doppler run --config dev -- bun run",
     "script:prod": "ENV=production doppler run --config prd -- bun run",
-    "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
+    "seed": "ENV=development doppler run --config dev -- run-s build seed:achievements seed:test",
     "seed:achievements": "ENV=development doppler run --config dev bun run src/data/seedAchievements.ts",
     "seed:prod:achievements": "ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
     "seed:flashcards": "ENV=development bun run src/data/seedFlashcards.ts",
