--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -4,6 +4,7 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.1.2",
     "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
@@ -47,6 +49,7 @@
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@types/ramda": "^0.29.3",
+    "@types/ws": "^8.5.9",
     "@uzh-bf/design-system": "2.4.2",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
@@ -59,8 +62,8 @@
     "nyc": "15.1.0",
     "prisma": "5.3.1",
     "ts-node": "10.9.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
