--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -4,7 +4,6 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
   "files": [
     "dist"
   ],
@@ -49,5 +48,6 @@
       "path": "dist/index.js",
       "limit": "10 KB"
     }
-  ]
+  ],
+  "type": "module"
 }
