--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -4,7 +4,6 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
   "files": [
     "dist"
   ],
@@ -37,46 +36,48 @@
     "uuidv4": "6.2.13"
   },
   "scripts": {
-    "//migrate:learningElements:prod": "cross-env ENV=development doppler run --config prd -- bun run src/scripts/migrateLearningElements.ts",
     "//migrate:learningElements": "cross-env ENV=development doppler run --config dev -- bun run src/scripts/migrateLearningElements.ts",
+    "//migrate:learningElements:prod": "cross-env ENV=development doppler run --config prd -- bun run src/scripts/migrateLearningElements.ts",
+    "build": "run-s generate build:ts build:copy",
     "build:copy": "node src/copy.cjs",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "build:watch": "cross-env NODE_ENV=development tsup --watch",
-    "build": "run-s generate build:ts build:copy",
     "check": "tsc --noEmit",
-    "format:check": "prettier --check .",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "migrate:script:prod": "cross-env ENV=development doppler run --config prd -- bun run",
     "migrate:script": "cross-env ENV=development doppler run --config dev -- bun run",
+    "migrate:script:prod": "cross-env ENV=development doppler run --config prd -- bun run",
+    "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
     "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:diff": "doppler run --config dev --command 'prisma migrate diff --from-url \"$PROD_DATABASE_URL\" --to-migrations src/prisma/migrations --shadow-database-url \"postgres://klicker:klicker@localhost:5432/shadow\"'",
-    "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma --create-only",
     "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
+    "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma --create-only",
+    "prisma:push": "doppler run --config dev -- pnpm run prisma:push:raw",
     "prisma:push:qa": "doppler run --config stg -- pnpm run prisma:push:raw",
     "prisma:push:raw": "prisma db push --schema=src/prisma/schema.prisma",
-    "prisma:push": "doppler run --config dev -- pnpm run prisma:push:raw",
+    "prisma:reset": "doppler run --config dev -- pnpm run prisma:reset:raw",
     "prisma:reset:qa": "doppler run --config stg -- pnpm run prisma:reset:raw",
     "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
-    "prisma:reset": "doppler run --config dev -- pnpm run prisma:reset:raw",
     "prisma:resetCypress": "pnpm run prisma:reset:raw",
     "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema.prisma",
     "prisma:setup": "run-s prisma:reset prisma:push seed",
+    "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
-    "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
-    "script:prod": "ENV=production doppler run --config prd -- bun run",
     "script": "ENV=development doppler run --config dev -- bun run",
+    "script:prod": "ENV=production doppler run --config prd -- bun run",
+    "seed": "cross-env ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:achievements": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedAchievements.ts",
     "seed:flashcards": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedFlashcards.ts",
     "seed:groupActivityResults": "ENV=development doppler run --config dev -- bun run src/data/seedGroupActivityResults.ts",
     "seed:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config dev -- bun run src/data/importQuestions.ts",
     "seed:mockExamPoints": "cross-env ENV=production doppler run --config prd -- bun run src/scripts/parseMockExamPoints.ts",
+    "seed:prod": "cross-env ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
     "seed:prod:achievements": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
     "seed:prod:ami": "pnpm run seed:qa:ami",
     "seed:prod:bf1": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedBF1.ts",
@@ -86,12 +87,10 @@
     "seed:prod:levels": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedLevels.ts",
     "seed:prod:summerSchool": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedSummerSchool.ts",
     "seed:prod:user": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedUser.ts",
-    "seed:prod": "cross-env ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
+    "seed:qa": "cross-env ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
     "seed:qa:bf1": "cross-env ENV=development doppler run --config stg -- bun run src/data/seedBF1.ts",
     "seed:qa:test": "bun run src/data/seedTEST.ts",
-    "seed:qa": "cross-env ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
     "seed:test": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedTEST.ts",
-    "seed": "cross-env ENV=development doppler run --config dev -- run-s build seed:test",
     "size": "size-limit"
   },
   "engines": {
@@ -102,5 +101,6 @@
   },
   "prisma": {
     "seed": "pnpm run seed"
-  }
+  },
+  "type": "module"
 }
