--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Node 18",
-
   "_version": "2.0.0",
-
-  "include": ["src"],
-
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
-
-    "lib": ["es2023"],
+    "lib": [
+      "es2023"
+    ],
     "module": "Node16",
     "target": "es2022",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
