--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -44,6 +44,7 @@
     "@graphql-tools/utils": "10.0.6",
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
+    "@tsconfig/node18": "^2.0.1",
     "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
@@ -65,7 +66,7 @@
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "tsup": "7.2.0",
-    "typescript": "5.2.2",
+    "typescript": "5.1.6",
     "web-push": "3.6.1"
   },
   "scripts": {
