--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -45,11 +45,12 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@types/node-schedule": "^2.1.0",
     "@types/ramda": "^0.29.3",
     "@types/uuid": "^9.0.2",
