--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,21 +1,16 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 18",
-  "_version": "2.0.0",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
-    "src"
+    "src",
+    "src/types/app.ts",
+    "@klicker-uzh/prisma/dist/pothos.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": [
-      "es2023"
-    ],
-    "module": "Node16",
-    "target": "es2022",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    // "module": "ESNext",
+    // "moduleResolution": "bundler",
+  },
+  "ts-node": {
+    "transpileOnly": true
   }
 }
