migration table and remove dotenv

--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src", "src/types/app.ts"],
+  "include": [
+    "src",
+    "src/types/app.ts",
+    "../../apps/backend-docker/src/migration.ts",
+    "../../apps/backend-docker/scripts/2023-11-13_upgrade_question_data.ts"
+  ],
   "compilerOptions": {
     "baseUrl": "."
   },
