--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -53,7 +53,6 @@
     "@uzh-bf/design-system": "2.4.2",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
     "eslint": "8.45.0",
     "ioredis-mock": "8.7.0",
     "jest": "29.5.0",
@@ -72,10 +71,10 @@
     "dev": "npm-run-all --parallel dev:build dev:run",
     "dev:build": "tsup --watch",
     "dev:offline": "pnpm run dev",
-    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config ./dist/index.js'",
+    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node --env-file=.env ./dist/index.js'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "start": "node -r dotenv/config dist/index.js",
+    "start": "node --env-file=.env dist/index.js",
     "start:test": "nyc --silent npm start",
     "exec:prod": "doppler run --config prd -- ts-node --esm"
   },
