--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": [
-    "src",
-    "src/types/app.ts",
-  ],
+  "include": ["src", "src/types/app.ts"],
   "compilerOptions": {
     "baseUrl": "."
   },
