--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -50,7 +50,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
         containers: [1, 2] # Run 2 parallel instances
     steps:
@@ -117,7 +117,7 @@ jobs:
           wait-on: "http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010"
           wait-on-timeout: 480
           record: true
-          browser: chrome
+          browser: electron
           working-directory: cypress
           parallel: true
         env:
