--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -1,9 +1,9 @@
 name: Klicker automated testing with cypress
 on:
   push:
-    branches: ["v3", "v3*"]
+    branches: ['v3', 'v3*']
   pull_request:
-    branches: ["v3", "v3*"]
+    branches: ['v3', 'v3*']
     types: [opened, synchronize, reopened]
   # workflow_dispatch:
 
@@ -49,10 +49,10 @@ jobs:
           - 6379:6379
 
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
-      matrix:
-        containers: [1, 2] # Run 2 parallel instances
+    # strategy:
+    # fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+    # matrix:
+    #   containers: [1, 2] # Run 2 parallel instances
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
 
@@ -114,12 +114,12 @@ jobs:
         timeout-minutes: 20
         with:
           install: false
-          wait-on: "http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010"
+          wait-on: 'http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010'
           wait-on-timeout: 480
           record: true
           browser: chrome
           working-directory: cypress
-          parallel: true
+          # parallel: true
         env:
           APP_SECRET: abcd
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
