--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -35,6 +35,7 @@
     "ws": "8.13.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "3.12.1",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
