--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -106,8 +106,8 @@ jobs:
           DATABASE_URL: postgres://klicker:klicker@localhost:5432/klicker
 
       - name: Start services in the background
-        run: pnpm run start:test &
-        # run: pnpm run start:test
+        # run: pnpm run start:test &
+        run: pnpm run start:test
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
