--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -116,7 +116,7 @@ jobs:
           wait-on: 'http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010'
           wait-on-timeout: 1000
           record: true
-          browser: chrome
+          browser: electron
           working-directory: cypress
           # parallel: true
         env:
