--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -35,6 +35,7 @@
     "ws": "8.13.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "3.12.1",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
@@ -73,7 +74,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
-    "start:test": "nyc --silent npm start",
+    "--start:test": "nyc --silent npm start",
+    "start:test": "npm start",
     "exec:prod": "doppler run --config prd -- ts-node --esm"
   },
   "engines": {
