--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -106,6 +106,8 @@ jobs:
 
       - name: Start services in the background
         run: pnpm run start:test &
+        env:
+          DATABASE_URL: postgres://klicker:klicker@localhost:5432/klicker
         # run: pnpm run start:test
 
       - name: Cypress run
