--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,11 +8,12 @@
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "5.6.0",
     "xml2js": "0.6.2"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/fs-extra": "^11.0.3",
@@ -27,12 +28,12 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "5.5.2",
-    "prisma-json-types-generator": "3.0.2",
+    "prisma": "5.6.0",
+    "prisma-json-types-generator": "3.0.3",
     "ramda": "0.29.0",
-    "tsup": "7.2.0",
+    "tsup": "8.0.1",
     "turndown": "7.1.2",
-    "typescript": "5.2.2",
+    "typescript": "5.3.2",
     "uuidv4": "6.2.13"
   },
   "scripts": {
@@ -72,24 +73,9 @@
     "script": "ENV=development doppler run --config dev -- bun run",
     "script:prod": "ENV=production doppler run --config prd -- bun run",
     "seed": "cross-env ENV=development doppler run --config dev -- run-s build seed:test",
-    "seed:achievements": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedAchievements.ts",
-    "seed:flashcards": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedFlashcards.ts",
-    "seed:groupActivityResults": "ENV=development doppler run --config dev -- bun run src/data/seedGroupActivityResults.ts",
-    "seed:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config dev -- bun run src/data/importQuestions.ts",
-    "seed:mockExamPoints": "cross-env ENV=production doppler run --config prd -- bun run src/scripts/parseMockExamPoints.ts",
-    "seed:prod": "cross-env ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
-    "seed:prod:achievements": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
-    "seed:prod:ami": "pnpm run seed:qa:ami",
-    "seed:prod:bf1": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedBF1.ts",
-    "seed:prod:bf2": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedBF2.ts",
-    "seed:prod:flashcards": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedFlashcards.ts",
-    "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- bun run src/data/importQuestions.ts",
-    "seed:prod:levels": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedLevels.ts",
-    "seed:prod:summerSchool": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedSummerSchool.ts",
-    "seed:prod:user": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedUser.ts",
-    "seed:qa": "cross-env ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
-    "seed:qa:bf1": "cross-env ENV=development doppler run --config stg -- bun run src/data/seedBF1.ts",
-    "seed:qa:test": "bun run src/data/seedTEST.ts",
+    "seed:data": "cross-env ENV=development doppler run --config dev -- bun run",
+    "seed:prod:data": "cross-env ENV=production doppler run --config prd -- bun run",
+    "seed:qa": "cross-env ENV=development doppler run --config stg -- npm-run-all bun run src/data/seedTEST.ts",
     "seed:test": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedTEST.ts",
     "size": "size-limit"
   },
