--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -70,7 +70,7 @@
   },
   "scripts": {
     "build": "run-s generate build:ts",
-    "build:ts": "cross-env NODE_ENV=production tsup --dts",
+    "build:ts": "cross-env NODE_ENV=production tsup",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
