--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -9,6 +9,6 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "Bundler"
+    "moduleResolution": "node"
   }
 }
