mismatches and running build

--- a/packages/grading/tsconfig.json
+++ b/packages/grading/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
-    "jsx": "react"
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   }
 }
