--- a/packages/lti/tsconfig.json
+++ b/packages/lti/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "include": ["src"],
-  "compilerOptions": {}
+  "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
+  }
 }
