--- a/packages/markdown/tsconfig.json
+++ b/packages/markdown/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
   }
 }
