--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -23,6 +23,7 @@
     "@sentry/tracing": "7.52.1",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "crypto-es": "2.1.0",
     "express": "4.18.2",
     "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
