--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -7,6 +7,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
+    "paths": {
+      "crypto": [
+        "node_modules/crypto-js"
+      ],
+    }
   }
 }
