--- a/deploy/charts/klicker-uzh-v2/templates/deployment-app.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/deployment-app.yaml
@@ -367,6 +367,7 @@ spec:
             httpGet:
               path: /healthz
               port: http
+            initialDelaySeconds: 600
           readinessProbe:
             httpGet:
               path: /healthz
