--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -15,7 +15,8 @@ env:
 
 jobs:
   cypress-run:
-    runs-on: self-hosted
+    # runs-on: self-hosted
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres:15
