--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -9,9 +9,6 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-  TURBO_REMOTE_ONLY: true
 
 jobs:
   cypress-run:
@@ -68,15 +65,14 @@ jobs:
         with:
           path: |
             ~/.pnpm
+            .turbo
             ${{ github.workspace }}/apps/auth/.next/cache
             ${{ github.workspace }}/apps/frontend-pwa/.next/cache
             ${{ github.workspace }}/apps/frontend-manage/.next/cache
             ${{ github.workspace }}/apps/frontend-control/.next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+            ${{ runner.os }}-turbo-
 
       - uses: pnpm/action-setup@v2
         with:
